Fix order and spacing

--- a/Src/NationsConverterWeb/NationsConverterWeb/Components/Pages/Dashboard.razor.css
+++ b/Src/NationsConverterWeb/NationsConverterWeb/Components/Pages/Dashboard.razor.css
@@ -13,7 +13,6 @@
 .categories {
     display: flex;
     justify-content: center;
-    justify-content: center;
     gap: 5px;
     border-bottom: 2px solid #333;
     padding: 10px;
@@ -27,6 +26,7 @@
         display: flex;
         align-items: center;
         gap: 8px;
+        margin-bottom: 5px;
     }
 
         .members div img {
